added animtion to the dark mode icon

--- a/Project-1/html/index.html
+++ b/Project-1/html/index.html
@@ -25,7 +25,7 @@
                         <li class="link"><a href="">Services</a></li>
                         <li class="link"><a href="">About</a></li>
                     </ul>
-                    <img src="../media/Icons/solid-black-sun-symbol.png" alt="dark-mode" id="darkmode" width="30">
+                    <img src="../media/Icons/solid-black-sun-symbol.png" alt="dark-mode" id="darkmode" class="sunrotation" width="30">
                 </div>
 
 
