added a background to the hero and added social media icons and solved the problem of the resposive but still not for mobile

--- a/Project-1/html/index.html
+++ b/Project-1/html/index.html
@@ -55,6 +55,10 @@
                         
                     </div>
 
+          
+
+
+
                     <div class="additional-deco">
                         <p>I help make customers make wonderful <span>websites</span> <br> <span>hire</span> me and let's jump to joy </p>
                         <div class="button-container">
@@ -62,6 +66,13 @@
                             <button>Projects</button>
                         </div>
                     </div>
+                    <div class="contact-icons-container">
+                        <a href="#"><img src="../media/Icons/soacial-media-icons/linkedin.png" alt=""></a>
+                        <a href="#"><img src="../media/Icons/soacial-media-icons/github.png" alt=""></a>
+                        <a href="#"><img src="../media/Icons/soacial-media-icons/facebook.png" alt=""></a>
+                        <a href="#"><img src="../media/Icons/soacial-media-icons/instagram.png" alt=""></a>
+                    </div>
+
                 </div>
         </div>    
     </div>
