corrected some dalse urls

--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -14,7 +14,7 @@
 
             <div class="header">
                 <div class="left-header-side">
-                    <img src="../media/Icons/nighteye.png" alt="" id="logo" width="65">
+                    <img src="media/Icons/nighteye.png" alt="" id="logo" width="65">
                     <p>night eye</p>
                 </div>
 
@@ -25,7 +25,7 @@
                         <li class="link"><a href="">Services</a></li>
                         <li class="link"><a href="">About</a></li>
                     </ul>
-                    <img src="../media/Icons/solid-black-sun-symbol.png" alt="dark-mode" id="darkmode" class="sunrotation" width="30">
+                    <img src="media/Icons/solid-black-sun-symbol.png" alt="dark-mode" id="darkmode" class="sunrotation" width="30">
                 </div>
 
 
@@ -51,7 +51,7 @@
 
 
                     <div class="hero-container">
-                        <img src="../media/Hero/1710108261682-removebg-preview.png" alt="">
+                        <img src="media/Hero/1710108261682-removebg-preview.png" alt="">
                         
                     </div>
 
@@ -67,10 +67,10 @@
                         </div>
                     </div>
                     <div class="contact-icons-container">
-                        <a href="#"><img src="../media/Icons/soacial-media-icons/linkedin.png" alt=""></a>
-                        <a href="#"><img src="../media/Icons/soacial-media-icons/github.png" alt=""></a>
-                        <a href="#"><img src="../media/Icons/soacial-media-icons/facebook.png" alt=""></a>
-                        <a href="#"><img src="../media/Icons/soacial-media-icons/instagram.png" alt=""></a>
+                        <a href="#"><img src="media/Icons/soacial-media-icons/linkedin.png" alt=""></a>
+                        <a href="#"><img src="media/Icons/soacial-media-icons/github.png" alt=""></a>
+                        <a href="#"><img src="media/Icons/soacial-media-icons/facebook.png" alt=""></a>
+                        <a href="#"><img src="media/Icons/soacial-media-icons/instagram.png" alt=""></a>
                     </div>
 
                 </div>
