add icon toggle color

--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -67,10 +67,10 @@
                         </div>
                     </div>
                     <div class="contact-icons-container">
-                        <a href="#"><img src="media/Icons/soacial-media-icons/linkedin.png" alt=""></a>
-                        <a href="#"><img src="media/Icons/soacial-media-icons/github.png" alt=""></a>
-                        <a href="#"><img src="media/Icons/soacial-media-icons/facebook.png" alt=""></a>
-                        <a href="#"><img src="media/Icons/soacial-media-icons/instagram.png" alt=""></a>
+                        <a href="#"><img src="media/Icons/soacial-media-icons/linkedin.png" alt="" class="icon"></a>
+                        <a href="#"><img src="media/Icons/soacial-media-icons/github.png" alt="" class="icon"></a>
+                        <a href="#"><img src="media/Icons/soacial-media-icons/facebook.png" alt="" class="icon"></a>
+                        <a href="#"><img src="media/Icons/soacial-media-icons/instagram.png" alt="" class="icon"></a>
                     </div>
 
                 </div>
